--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Plataformas2D.sln"
+    "dotnet.defaultSolution": "Plataformas_2D_IkerBuenoG-mez-main.sln"
 }
